Use %autorelease and %autochangelog to take advantage of the git history.
https://fedoraproject.org/wiki/Changes/rpmautospec

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,7 +1,8 @@
 FROM registry.fedoraproject.org/fedora
-RUN dnf install -y rpm-build 'dnf-command(builddep)' make
+RUN dnf install -y rpm-build rpmdevtools rpmautospec 'dnf-command(builddep)' make
 RUN mkdir /src
 WORKDIR /src
-COPY * .copr/Makefile /src
-RUN dnf builddep -y edgetx-companion.spec
+COPY edgetx-companion.spec *.patch .copr/Makefile /src
+COPY .git /src/.git
 RUN make srpm
+RUN dnf builddep -y edgetx-companion.spec
