We need the full history and clean worktree to make the computed release in GitHub Actions precise.

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,8 +1,9 @@
 FROM registry.fedoraproject.org/fedora
-RUN dnf install -y rpm-build rpmdevtools rpmautospec 'dnf-command(builddep)' make
+RUN dnf install -y rpm-build rpmdevtools rpmautospec git-core 'dnf-command(builddep)' make
 RUN mkdir /src
 WORKDIR /src
 COPY edgetx-companion.spec *.patch .copr/Makefile /src
 COPY .git /src/.git
+RUN git reset --hard HEAD
 RUN make srpm
 RUN dnf builddep -y edgetx-companion.spec
