--- a/.github/workflows/build-rpm.yaml
+++ b/.github/workflows/build-rpm.yaml
@@ -50,6 +50,11 @@ jobs:
         with:
           name: rust-nusb-rpms-${{ steps.fedora-version.outputs.VERSION_ID }}
           path: dependencies/rpms/**/rust-nusb*.rpm
+      - run: podman build --from registry.fedoraproject.org/fedora:${{ matrix.fedora }} --security-opt label=disable -v $(pwd)/dependencies/rpms:/root/rpmbuild/RPMS --build-arg=PACKAGE=rust-nonempty -f dependencies/Dockerfile .
+      - uses: actions/upload-artifact@v6
+        with:
+          name: rust-nonempty-rpms-${{ steps.fedora-version.outputs.VERSION_ID }}
+          path: dependencies/rpms/**/rust-nonempty*.rpm
       - name: Build source container image
         run: podman build --from registry.fedoraproject.org/fedora:${{ matrix.fedora }} -t localhost/edgetx-builder -f .github/Dockerfile .
       - run: mkdir -p rpmbuild/SRPMS
