Use rs_dfu-devel.

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,7 +1,8 @@
 FROM registry.fedoraproject.org/fedora
 RUN dnf install --setopt=install_weak_deps=False -y rpm-build rpmdevtools rpmautospec git-core 'dnf-command(builddep)' make
-RUN mkdir /src
+RUN mkdir -p /src
 WORKDIR /src
+RUN if [ -d /src/dependencies/RPMS/repodata ] ; then ( echo '[edgetx-build-dependencies]' ; echo 'baseurl=file:/src/dependencies/RPMS' ; echo gpgcheck=0 ) > /etc/yum.repos.d/edgetx-build-dependencies.repo ; fi
 COPY edgetx-companion.spec *.patch .copr/Makefile /src
 COPY .git /src/.git
 RUN git reset --hard HEAD
